--- a/docs/关于前端助手/安装.md
+++ b/docs/关于前端助手/安装.md
@@ -5,10 +5,29 @@ order: 1
 
 # 安装
 
+## 安装方法
+
+点击SillyTavern顶部的扩展图标，选择安装扩展，在弹出框内**二选一**任选一个链接填入：
+- https://gitlab.com/novi028/JS-Slash-Runner (不需要梯子)
+- https://github.com/N0VI028/JS-Slash-Runner.git (需要梯子)
+
+
+然后点击保存即可。
+
+![安装方法](/安装方法.png)
+
 :::warning
 前端助手要求 SillyTavern 版本在 1.12.6 及其以上才能使用。
 :::
 
+## 界面展示
+所在位置：
+![位置示意](/位置示意.png)
 
+界面示意：
 
+![界面示意](/界面示意.png)
 
+:::warning
+扩展第一次安装时，功能开关是默认关闭的，请在扩展选项卡中的"前端助手"里手动开启，之后会记忆状态。
+:::
