--- a/docs/关于前端助手/编写前端助手角色卡的推荐方案.md
+++ b/docs/关于前端助手/编写前端助手角色卡的推荐方案.md
@@ -19,4 +19,4 @@ order: 3
 
 但要注意它世界书中对前端助手和 slash command 的提示词是复制粘贴的, 因而在之后如果前端助手或酒馆更新, 则提示词不会涵盖更新内容. 你需要通过前端助手设置页下载相应的资料来更新它们:
 
-![获取资料](/public/获取资料.png)
+![获取资料](/获取资料.png)
