--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -5,4 +5,78 @@ order: 2
 
 # 常见问题解答
 
-[TODO](https://github.com/N0VI028/JS-Slash-Runner/blob/main/README_faq.md)
+## 📲 安装与更新问题
+
+### 安装后无响应
+**问题**: 安装扩展之后没有反应？  
+**解决**: 检查网络连接。如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络。
+
+### 扩展不显示或无法勾选
+**问题**: 安装提示成功但扩展界面未显示，或管理面板中无法勾选扩展/更新后扩展消失  
+**解决**: 升级酒馆版本。扩展仅支持1.12.6及以上版本。
+
+### 安装冲突
+**问题**: 提示 `Extension installation failed, Directory already exists...`的黄色错误弹窗  
+**解决**: 
+1. 进入酒馆安装目录 `SillyTavern/data/default-user/extensions`
+2. 删除 `JS-Slash-Runner` 文件夹
+3. 重新安装扩展
+
+### 安卓文件访问
+**问题**: 如何在安卓手机上访问酒馆文件夹？  
+**解决**: (仅适用于部分安卓系统，未经全面测试)
+
+- **方法一**: 通过文件管理器
+  1. 启动 Termux
+  2. 从根目录进入 Android/data
+  3. 通过侧边栏访问 Termux
+
+- **方法二**: 使用 MT 管理器
+  1. 启动 Termux
+  2. 在 MT 管理器添加本地存储
+  3. 通过侧边栏访问 Termux
+
+- **方法三**: 使用 zerotermux  
+  详见: https://discord.com/channels/1134557553011998840/1327980841497788457/1328211004194291714
+
+- **终极方案**:  
+  https://discord.com/channels/1134557553011998840/1296494001406345318/1336529057243729932
+
+### Git 相关错误
+**问题**: 提示 `Extension installation failed, Server Error:Error: spawn git ENOENT...`的黄色错误弹窗  
+**解决**: 安装/重新安装 git 或添加 git 到环境变量
+
+
+### 手动安装方法
+**问题**: 常规安装方法都失败？  
+**解决**:
+1. 连接 VPN
+2. 访问 [N0VI028/JS-Slash-Runner](https://github.com/N0VI028/JS-Slash-Runner)
+3. 下载 ZIP 压缩包
+4. 解压并重命名为 `JS-Slash-Runner`
+5. 移动到 `data/default-user/extensions` 目录
+   (多用户请将 default-user 替换为实际用户名)
+
+### 更新加载问题
+**问题**: 扩展管理面板一直显示 `Loading third-party extensions...`  
+**解决**: 连接或更换 VPN 后重试
+
+## 🪄 作者常见问题
+
+### 代码渲染问题
+**问题**: 代码未能正确渲染？  
+**解决**: 确保同时满足:
+1. 代码使用三个反引号包裹
+2. 代码中包含 `<body></body>` 闭合标签
+
+### 界面闪现问题
+**问题**: 界面短暂显示后消失？  
+**解决**: 检查并关闭可能存在冲突的扩展或油猴插件
+
+### QR 触发失效
+**问题**: QR 触发不起作用？  
+**解决**: 检查并删除代码中的 triggerSlash 函数定义，避免覆盖扩展默认定义
+
+## 🖥️ 界面显示问题
+如遇界面显示问题，请参考以下帖子进行自查：  
+https://discord.com/channels/1134557553011998840/1324937235623051385
