--- a/docs/关于前端助手/安装.md
+++ b/docs/关于前端助手/安装.md
@@ -14,7 +14,7 @@ order: 1
 
 然后点击保存即可。
 
-![安装方法](/安装方法.png)
+![安装方法](/安装方法.jpg)
 
 :::warning
 前端助手要求 SillyTavern 版本在 1.12.6 及其以上才能使用。
@@ -22,11 +22,17 @@ order: 1
 
 ## 界面展示
 所在位置：
-![位置示意](/位置示意.png)
+![位置示意](/位置示意.jpg)
 
 界面示意：
 
-![界面示意](/界面示意.png)
+![界面示意](/界面示意.jpg)
+
+- **启用脚本注入**：扩展的总开关，开启后，将支持HTML+CSS+JS的界面渲染与扩展内置功能运行。
+- **启用播放器**：前端助手内置的播放器，可在不启用脚本注入的情况下独立运行。
+- **自动开关局部正则**：自动开启角色卡绑定的局部正则。
+- **自动关闭不兼容选项**：自动关闭 SillyTavern 中可能影响前端界面显示的选项。包括“自动修复Markdown”、“修剪不完整的句子”、“禁止外部媒体”。
+- **启用油猴版兼容模式**：用于支持角色卡使用了[【SillyTavern / ST酒馆】html代码注入器](https://greasyfork.org/zh-CN/scripts/503174-sillytavern-st%E9%85%92%E9%A6%86-html%E4%BB%A3%E7%A0%81%E6%B3%A8%E5%85%A5%E5%99%A8)油猴插件中特有的功能，如角色卡未使用，可不开启。
 
 :::warning
 扩展第一次安装时，功能开关是默认关闭的，请在扩展选项卡中的"前端助手"里手动开启，之后会记忆状态。
