--- a/docs/关于前端助手/安装与更新.md
+++ b/docs/关于前端助手/安装与更新.md
@@ -3,7 +3,7 @@ title: 安装
 order: 1
 ---
 
-# 安装
+# 安装与更新
 
 ## 安装方法
 
@@ -19,6 +19,11 @@ order: 1
 :::warning
 前端助手要求 SillyTavern 版本在 1.12.6 及其以上才能使用。
 :::
+
+## 更新方法
+
+点击SillyTavern顶部的扩展图标，选择管理扩展，在弹出框的最下方，若有新版本更新，名称会显示绿色，并在左方显示更新按钮。
+![更新方法](/更新方法.jpg)
 
 ## 界面展示
 所在位置：
