--- a/docs/关于前端助手/安装与更新.md
+++ b/docs/关于前端助手/安装与更新.md
@@ -22,7 +22,7 @@ order: 1
 
 ## 更新方法
 
-点击SillyTavern顶部的扩展图标，选择管理扩展，在弹出框的最下方，若有新版本更新，名称会显示绿色，并在左方显示更新按钮。
+点击SillyTavern顶部的扩展图标，选择管理扩展，在弹出框的最下方，若有新版本更新，名称会显示绿色，并显示更新按钮。
 ![更新方法](/更新方法.jpg)
 
 ## 界面展示
