--- a/docs/最佳实践/随卡自动导入与更新快速回复.md
+++ b/docs/最佳实践/随卡自动导入与更新快速回复.md
@@ -1,16 +1,13 @@
-<script setup>
-import MyButton from '../.vitepress/theme/components/MyButton.vue'
-</script>
 
-# 自动导入与更新快速回复
+# 随卡自动导入与更新快速回复
 
 还在为角色卡导出不会同时导出快速回复而恶心吗？前端助手可以做到选择角色卡时自动导入/更新快速回复、自动启用快速回复——让玩家直接开玩！
 
 ## 原理
 
 - 前端助手可以用 `triggerSlash` 使用 `/qr-set-on` 等命令
-- 前端助手支持在正则里加载全局脚本，而局部正则会随着角色卡导出对吧😋
-- 可是如果玩家局部正则被关掉了呢？前端助手现在已经提供了“自动打开局部正则”选项。
+- 前端助手支持在正则里加载全局脚本，而局部正则会随着角色卡导出对吧
+- 可是如果玩家局部正则被关掉了呢？前端助手现在已经提供了“自动打开局部正则”选项
 
 ## 示例
 
