--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -28,19 +28,36 @@ order: 2
 
 - **方法一**: 通过文件管理器
   1. 启动 Termux
-  2. 从根目录进入 Android/data
-  3. 通过侧边栏访问 Termux
+  2. 使用系统文件管理器进入受限制目录 Android/data
+  3. 在新的文件管理界面通过侧边栏访问 Termux
 
 - **方法二**: 使用 MT 管理器
   1. 启动 Termux
   2. 在 MT 管理器添加本地存储
-  3. 通过侧边栏访问 Termux
+  3. 通过 MT 管理器侧边栏访问 Termux
 
 - **方法三**: 使用 zerotermux  
   详见: https://discord.com/channels/1134557553011998840/1327980841497788457/1328211004194291714
 
 - **终极方案**:  
-  https://discord.com/channels/1134557553011998840/1296494001406345318/1336529057243729932
+  1. 打开termux，如果装了一键脚本输入0退出
+  2. 输入下面的内容，回车
+  ```bash
+  cd /
+  ```
+  3. 输入下面的内容，回车，然后等待搜索完成
+  ```bash
+  find ~ -type d -name "JS-Slash-Runner"
+  ```
+  如果文件夹存在，上面会得到一个路径，复制下来，执行第四步
+
+  4.使用`rm -rf `为开头（rf后面有一个空格），后接第三步搜索到的路径，输入命令后回车，以下是示例，路径需要你自行替换
+  ```bash
+  rm -rf /root/SillyTavern1.12.6/SillyTavern/data/default-user/extensions/JS-Slash-Runner
+  ```
+  :::warning
+  此方法删除后不会有任何提示，请谨慎使用
+  :::
 
 ### Git 相关错误
 **问题**: 提示 `Extension installation failed, Server Error:Error: spawn git ENOENT...`的黄色错误弹窗  
