--- a/docs/基本用法/渲染前端界面.md
+++ b/docs/基本用法/渲染前端界面.md
@@ -62,6 +62,7 @@ class 样式只导入了图片链接 `background-image: url('${avatarPath}');`, 
 :::tip
 - 在聊天中途更换了 user 角色, 其显示逻辑与酒馆一致, 会在新的楼层显示新的头像
 - 想要将旧的楼层头像显示同步, 需要点击用户面板的同步按钮。
+- 如果想要获取角色（char）的头像，可直接插入`<img src="./characters/{{char}}.png">`
 :::
 
 ## 禁用加载动画
