--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -5,7 +5,7 @@ order: 2
 
 # 常见问题解答
 
-## 📲 安装与更新问题
+## 安装与更新问题
 
 ### 安装后无响应
 **问题**: 安装扩展之后没有反应？  
@@ -15,12 +15,12 @@ order: 2
 **问题**: 安装提示成功但扩展界面未显示，或管理面板中无法勾选扩展/更新后扩展消失  
 **解决**: 升级酒馆版本。扩展仅支持1.12.6及以上版本。
 
-### 安装冲突
+### 安装时提示文件夹已存在
 **问题**: 提示 `Extension installation failed, Directory already exists...`的黄色错误弹窗  
 **解决**: 
 1. 进入酒馆安装目录 `SillyTavern/data/default-user/extensions`
 2. 删除 `JS-Slash-Runner` 文件夹
-3. 重新安装扩展
+3. 检查网络连接（建议使用不需要国外网络环境的gitlab安装链接），重新安装扩展
 
 ### 安卓文件访问
 **问题**: 如何在安卓手机上访问酒馆文件夹？  
@@ -67,18 +67,22 @@ order: 2
 ### 手动安装方法
 **问题**: 常规安装方法都失败？  
 **解决**:
-1. 连接 VPN
+1. 确保为国外网络环境
 2. 访问 [N0VI028/JS-Slash-Runner](https://github.com/N0VI028/JS-Slash-Runner)
-3. 下载 ZIP 压缩包
+3. 点击页面右上角绿色按钮 `Code` ，选择 `Download ZIP` 下载压缩包
 4. 解压并重命名为 `JS-Slash-Runner`
-5. 移动到 `data/default-user/extensions` 目录
-   (多用户请将 default-user 替换为实际用户名)
+5. 移动到 `SillyTavern/data/default-user/extensions` 目录
+   (酒馆多用户使用者请将 default-user 替换为实际用户名)
 
 ### 更新加载问题
 **问题**: 扩展管理面板一直显示 `Loading third-party extensions...`  
 **解决**: 连接或更换 VPN 后重试
 
-## 🪄 作者常见问题
+### 提示未连接到API
+**问题**: 扩展或扩展管理界面显示 `Not connected to the API!` 或 `Could not connect to API` 的红色错误提示文字  
+**解决**: 此提示与前端助手无关，本扩展无需连接API
+
+## 作者常见问题
 
 ### 代码渲染问题
 **问题**: 代码未能正确渲染？  
@@ -94,6 +98,6 @@ order: 2
 **问题**: QR 触发不起作用？  
 **解决**: 检查并删除代码中的 triggerSlash 函数定义，避免覆盖扩展默认定义
 
-## 🖥️ 界面显示问题
-如遇界面显示问题，请参考以下帖子进行自查：  
+## 界面显示问题
+如扩展安装成功但界面显示失败，请参考以下帖子进行自查：  
 https://discord.com/channels/1134557553011998840/1324937235623051385
