--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -39,7 +39,7 @@ order: 2
 - **方法三**: 使用 zerotermux  
   详见: https://discord.com/channels/1134557553011998840/1327980841497788457/1328211004194291714
 
-- **终极方案**:  
+- 找不到文件夹但还是提示文件夹存在？**终极方案**:  
   1. 打开termux，如果装了一键脚本输入0退出
   2. 输入下面的内容，回车
   ```bash
