增加页面起始的参数及返回值展示

--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -56,7 +56,8 @@ order: 2
   rm -rf /root/SillyTavern1.12.6/SillyTavern/data/default-user/extensions/JS-Slash-Runner
   ```
   :::warning
-  此方法删除后不会有任何提示，请谨慎使用
+  此方法删除后不会有任何提示，请谨慎使用。下面是直接一键删除的命令，但可控性较差：
+  `find ~ -type d -name "JS-Slash-Runner" | rm -rf`
   :::
 
 ### Git 相关错误
@@ -73,6 +74,10 @@ order: 2
 4. 解压并重命名为 `JS-Slash-Runner`
 5. 移动到 `SillyTavern/data/default-user/extensions` 目录
    (酒馆多用户使用者请将 default-user 替换为实际用户名)
+
+:::warning
+使用此方法安装的扩展无法自动检查更新
+:::
 
 ### 更新加载问题
 **问题**: 扩展管理面板一直显示 `Loading third-party extensions...`  
