--- a/docs/基本用法/库功能.md
+++ b/docs/基本用法/库功能.md
@@ -45,10 +45,10 @@ saveAs(blob，"filename.txt");
 
 ```typescript [从链接下载文件]
 // 链接是本地链接或域外支持 CORS 的链接，则直接下载:
-saveAs(`https://gitgud.io/api/v4/projects/${encodeURIComponent("SmilingFace/tavern_resource")}/repository/files/${encodeURIComponent("角色卡/妹妹请求你保护她露出/妹妹请求你保护她露出.png")}/raw?ref=main`，"妹妹请求你保护她露出.png");
+saveAs(`https://gitgud.io/api/v4/projects/${encodeURIComponent("SmilingFace/tavern_resource")}/repository/files/${encodeURIComponent("角色卡/妹妹请求你保护她/妹妹请求你保护她.png")}/raw?ref=main`，"妹妹请求你保护她.png");
 
 // 否则将会弹窗到对应的链接 (浏览器会默认拦截):
-saveAs("https://gitgud.io/SmilingFace/tavern_resource/-/raw/main/角色卡/妹妹请求你保护她露出/妹妹请求你保护她露出.png?inline=false"，"妹妹请求你保护她露出.png")
+saveAs("https://gitgud.io/SmilingFace/tavern_resource/-/raw/main/角色卡/妹妹请求你保护她/妹妹请求你保护她.png?inline=false"，"妹妹请求你保护她.png")
 ```
 :::
 
