--- a/docs/应用示例/检查角色卡是否更新并下载.md
+++ b/docs/应用示例/检查角色卡是否更新并下载.md
@@ -81,7 +81,7 @@ Access to fetch at 'https://<target website>' from origin 'https://<your website
     const config = {
       gitlab_domain: 'gitgud.io',
       project_path: 'SmilingFace/tavern_resource',
-      file_path: '角色卡/妹妹请求你保护她露出/妹妹请求你保护她露出.png',
+      file_path: '角色卡/妹妹请求你保护她/妹妹请求你保护她.png',
       current_commit: '2b74088f',
       target_commit: 'main'
     };
@@ -210,7 +210,7 @@ Access to fetch at 'https://<target website>' from origin 'https://<your website
 const config = {
   gitlab_domain: "gitgud.io",
   project_path: "SmilingFace/tavern_resource",
-  file_path: "角色卡/妹妹请求你保护她露出/妹妹请求你保护她露出.png",
+  file_path: "角色卡/妹妹请求你保护她/妹妹请求你保护她.png",
   from_commit: "eabaf643",
 }
 
