--- a/docs/关于前端助手/安装与更新.md
+++ b/docs/关于前端助手/安装与更新.md
@@ -11,10 +11,17 @@ order: 1
 - https://gitlab.com/novi028/JS-Slash-Runner (不需要国外网络环境)
 - https://github.com/N0VI028/JS-Slash-Runner.git (需要国外网络环境)
 
-
 然后点击保存即可。
 
+**图片示意：**
 ![安装方法](/安装方法.jpg)
+
+**视频演示：**
+
+<video width="100%" height="auto" controls style="margin-top: 15px;">
+  <source src="https://gitgud.io/SmilingFace/tavern_resource/-/raw/main/前端助手/安装方法.mp4?inline=false" type="video/mp4">
+  您的浏览器不支持 video 标签
+</video>
 
 :::warning
 前端助手要求 SillyTavern 版本在 1.12.6 及其以上才能使用。
@@ -40,5 +47,6 @@ order: 1
 - **启用油猴版兼容模式**：用于支持角色卡使用了[【SillyTavern / ST酒馆】html代码注入器](https://greasyfork.org/zh-CN/scripts/503174-sillytavern-st%E9%85%92%E9%A6%86-html%E4%BB%A3%E7%A0%81%E6%B3%A8%E5%85%A5%E5%99%A8) 油猴插件中特有的功能，如角色卡未使用，可不开启。
 
 :::warning
-扩展第一次安装时，功能开关是默认关闭的，请在扩展选项卡中的"前端助手"里手动开启，之后会记忆状态。
+扩展第一次安装时，功能开关是默认关闭的，请在扩展选项卡中的"前端助手"里手动开启，之后会记忆状态。扩展具有快捷切换开关，位于：
+![快捷开关](/快捷开关.jpg)
 :::
