--- a/docs/应用示例/随预设自动开关正则.md
+++ b/docs/应用示例/随预设自动开关正则.md
@@ -10,4 +10,8 @@
 
 <MyButton url="https://gitgud.io/SmilingFace/tavern_resource/-/raw/main/前端助手/自动开关预设正则/角色卡.png?inline=false">📥 下载直接可用的模板</MyButton>
 
-![自动开关预设正则](https://media.discordapp.net/attachments/1337381239467802664/1337388775751553126/image.png?ex=67ab385b&is=67a9e6db&hm=793eb57ab3cbe43d97415aff2231f7d64f077fe4d1ebbb5340c8329e1a785db2&=&format=webp&quality=lossless)
+<video width="100%" height="auto" controls style="margin-top: 15px;">
+  <source src="https://gitgud.io/SmilingFace/tavern_resource/-/raw/main/%E5%89%8D%E7%AB%AF%E5%8A%A9%E6%89%8B/%E8%87%AA%E5%8A%A8%E5%BC%80%E5%85%B3%E9%A2%84%E8%AE%BE%E6%AD%A3%E5%88%99/%E8%A7%86%E9%A2%91.mov?inline=false" type="video/mp4">
+  您的浏览器不支持 video 标签
+</video>
+
