--- a/docs/功能详情/版本操作.md
+++ b/docs/功能详情/版本操作.md
@@ -33,3 +33,6 @@ const version = $(".js-settings", window.parent.document)
 ```typescript
 async function updateFrontendVersion(): Promise<boolean>;
 ```
+
+### 返回值
+- **是否更新成功**: `boolean`
