--- a/docs/功能详情/世界书.md
+++ b/docs/功能详情/世界书.md
@@ -112,9 +112,6 @@ if (_.isEqual(_.merge({}, settings, expected_settings), settings)) {
 async function getCharLorebooks(
   option: GetCharLorebooksOption = {}
 ): Promise<CharLorebook[]>;
-async function getCharLorebooks(
-  option: GetCharLorebooksOption = {}
-): Promise<string[]>;
 ```
 
 ```typescript [CharLorebook]
@@ -147,10 +144,7 @@ interface GetCharLorebooksOption {
 
 ### 返回值
 
-一个 CharLorebook 数组：
-
-- **name**: `string`
-- **type**: `"primary" | "additional"`
+- **CharLorebook 数组**: [`CharLorebook[]`](./世界书#charlorebook)
 
 ### 示例
 
