--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -36,7 +36,8 @@ order: 2
   3. 通过 MT 管理器侧边栏访问 Termux
 
 - **方法三**: 使用 zerotermux  
-  详见： https://discord.com/channels/1134557553011998840/1327980841497788457/1328211004194291714
+  ZeroTermux 是根据 Termux 二次开发的一个非盈利性的软件，安装其内部插件后可直接访问 Termux 文件目录。
+  [详见Discord帖子](https://discord.com/channels/1134557553011998840/1327980841497788457/1328211004194291714)
 
 - 找不到文件夹但还是提示文件夹存在？**终极方案**:  
   1. 打开termux，如果装了一键脚本输入0退出
@@ -206,4 +207,4 @@ order: 2
 点击编辑后再点击确认按钮达到刷新的效果，一般可以解决此类问题。
 
 #### 5. 为啥出现了两次窗口
-> 是不是安了Gemini轮询插件？
+Gemini轮询插件会再渲染一次代码内容，导致出现两个窗口。
