--- a/docs/基本用法/渲染前端界面.md
+++ b/docs/基本用法/渲染前端界面.md
@@ -47,13 +47,14 @@ order: 1
 
 ## 获取 User 头像
 
-若要在界面中展示 User 头像，需使用 class `user_avatar`。
+若要在界面中展示 User 头像，需使用 class `user-avatar`或`user_avatar`。
 
 :::info 示例
-在你想要放入用户头像的地方设置 class 为 `user_avatar`, 此时容器的背景图片就会变为当前用户头像
+在你想要放入用户头像的地方设置 class 为 `user-avatar`或`user_avatar`, 此时容器的背景图片就会变为当前用户头像
 
 ```html
-<div class="user_avatar"></div>
+<div class="user-avatar"></div>
+<!-- 或者<div class="user_avatar"></div> -->
 ```
 
 :::
