--- a/docs/应用示例/前端界面内的流式传输.md
+++ b/docs/应用示例/前端界面内的流式传输.md
@@ -13,8 +13,8 @@
 
 也就是说,
 - 玩家只在顶楼的消息楼层 iframe 内进行游玩，不再生成新的楼层；
-- 对于玩家的输入，我们通过前端助手的 `generate`、`generateRaw` 命令自行要求 ai 回复；
-- 为了让消息记录下来，我们用 `setChatMessage` 将它保存到消息文件中（或自制存档机制？）。
+- 对于玩家的输入，我们通过前端助手的 [`generate`](../功能详情/请求生成#generate)、[`generateRaw`](../功能详情/请求生成#generateraw) 命令自行要求 ai 回复；
+- 为了让消息记录下来，我们用 [`setChatMessage`](../功能详情/楼层消息#setchatmessage) 将它保存到消息文件中（或自制存档机制？）。
 
 ### 方法2: 不再依靠酒馆显示，用全局脚本 iframe 获取流式传输文本并生成界面（可能更自由）
 
@@ -42,6 +42,6 @@ $(`div.mes[mesid = "${message_id}"]`，window.parent.document).find(`div.mes_tex
 
 1. 全局脚本监听 `tavern_events.MESSAGE_RECEIVED -> message_id`，获取新消息楼层中的 ai 输出；
 2. 全局脚本处理消息中的计算；
-3. 全局脚本通过 `getRegexData` 或 `getWorldEntries` 等，来得到存储在正则、世界书条目或其他地方的消息楼层 iframe（要渲染的`<body>`代码块）;
+3. 全局脚本通过 [`getTavernRegexes`](../功能详情/酒馆正则#gettavernregexes) 或 [`getLorebookEntries`](../功能详情/世界书/获取世界书#getLorebookEntries) 等，来得到存储在正则、世界书条目或其他地方的消息楼层 iframe（要渲染的`<body>`代码块）;
 4. 全局脚本将之前的计算结果填入到获取到的消息楼层 iframe 中；
-5. 全局脚本用 `setChatMessage` 将消息楼层修改为该消息楼层 iframe。
+5. 全局脚本用 [`setChatMessage`](../功能详情/楼层消息#setchatmessage) 将消息楼层修改为该消息楼层 iframe。
