--- a/docs/功能详情/变量操作/修改变量.md
+++ b/docs/功能详情/变量操作/修改变量.md
@@ -1,36 +1,6 @@
-# 变量操作
+# 修改变量
 
 <CustomTOC />
-
-## getVariables
-获取变量表。
-
-```typescript
-async function getVariables(option: VariableOption = {}): Promise<Record<string, any>>
-```
-### 参数
-
-#### `type?`
-- `'chat'`: 聊天变量表（默认值）
-- `'global'`: 全局变量表
-
-### 返回值
-- **包含变量键值对的对象**: `Promise<Record<string, any>>`
-
-### 示例
-:::code-group
-```typescript [获取所有聊天变量并弹窗输出结果]
-const variables = await getVariables();
-alert(variables);
-```
-```typescript [获取所有全局变量]
-const variables = await getVariables({type: 'global'});
-// 前端助手内置了 lodash 库，你能用它做很多事，比如查询某个变量是否存在
-if (_.has(variables, "神乐光.好感度")) {
-  /* ... */
-}
-```
-:::
 
 ## replaceVariables
 完全替换变量表。
@@ -158,63 +128,3 @@ async function insertVariables(variables: Record<string, any>, option: VariableO
 await insertVariables({爱城华恋: {好感度: 10}, 神乐光: {好感度: 5, 认知度: 0}});
 // 执行后变量: `{爱城华恋: {好感度: 5}, 神乐光: {好感度: 5, 认知度: 0}}`
 ```
-
-## deleteVariable
-删除变量, 如果变量不存在则什么也不做。
-
-```typescript
-async function deleteVariable(variable_path: string, option: VariableOption = {}): Promise<boolean> {
-  let result: boolean = false;
-  await updateVariablesWith(old_variables => { result = _.unset(old_variables, variable_path); return old_variables; }, option);
-  return result;
-}
-```
-
-### 参数
-
-#### `variable_path`
-要删除的变量路径：
-- 如果变量不存在，则什么也不做
-- 如果变量已经存在，则删除该变量
-
-#### `type?`
-- `'chat'`: 聊天变量表（默认值）
-- `'global'`: 全局变量表
-
-### 返回值
-- **布尔值**: `boolean`
-
-### 示例
-
-```typescript
-// 执行前变量: `{爱城华恋: {好感度: 5}}`
-await deleteVariable("爱城华恋.好感度");
-// 执行后变量: `{爱城华恋: {}}`
-```
-
-## 在提示词中获取变量
-你可以通过以下格式在提示词中获取变量：
-
-### 变量示例
-
-```typescript
-const 全局变量 = {
-  神乐光: {
-    好感度: 50,
-  },
-};
-
-const 聊天变量 = {
-  商品: [{ 内容: '...' }, { 内容: '...' }],
-};
-
-const 消息楼层变量 = {
-  当前剧情阶段: '...',
-};
-```
-
-你可以通过以下格式在提示词中获取他们:
-
-- 全局变量: <code v-pre>{{get_global_variable::神乐光.好感度}}</code>
-- 聊天变量: <code v-pre>{{get_chat_variable::商品.1.内容}}</code>
-- 消息楼层变量 (通过 `setChatMessage` 设置), 将会获取到最新绑定的消息楼层变量: <code v-pre>{{get_message_variable::当前剧情阶段}}</code>
