更新 请求生成.md

--- a/docs/功能详情/请求生成.md
+++ b/docs/功能详情/请求生成.md
@@ -2,6 +2,10 @@
 
 前端助手提供了函数用于更加灵活地请求 AI 生成回复，你可以通过它来自定义生成时要采用的提示词配置。
 
+:::warning
+目前仅支持聊天补全（`Chat Completion`）。
+:::
+
 <CustomTOC />
 ## generate
 
@@ -307,3 +311,15 @@ type BuiltinPrompt =
   | 'user_input'           // 用户输入
   ;
 ```
+
+**`user_input`与`chat_history`的关系：**
+
+在[`generateRaw`](./请求生成#generateRaw)中，`user_input`可以自由选择放置的位置了。关于`user_input`和`chat_history`的关系如下：
+
+当`chat_history`不在`ordered_prompts`：
+- 如果`user_input`未在 `ordered_prompts` 中：将自动添加到所有提示词的最后面
+- 如果`user_input`在 `ordered_prompts` 中：以`user_input`在 `ordered_prompts` 中的位置为准
+
+当`chat_history`在`ordered_prompts`时：
+- 如果`user_input`未在 `ordered_prompts` 中：将自动插入到最新一条聊天记录后
+- 如果`user_input`在 `ordered_prompts` 中：`user_input`和`chat_history`会分别插入到 `ordered_prompts` 中指示的位置
