更新 常见问题解答.md

--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -6,46 +6,55 @@ order: 2
 
 ## 安装与更新问题
 
-### 安装后无响应
+### 安装后无任何响应
+
 **问题**: 安装扩展之后没有反应？  
 **解决**: 检查网络连接。如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络。
 
-### 扩展不显示或无法勾选
-**问题**: 安装提示成功但扩展界面未显示，或管理面板中无法勾选扩展/更新后扩展消失  
+### 安装/更新成功但扩展不显示
+
+**问题**: 
+- 安装/更新提示成功但扩展未显示
+- 管理面板中无法勾选，呈灰色
+
 **解决**: 升级酒馆版本。扩展仅支持1.12.6及以上版本。
 
-### 安装时提示文件夹已存在
-**问题**: 提示 `Extension installation failed, Directory already exists...`的黄色错误弹窗  
+### 安装时弹出红色错误弹窗
+**问题**: 红色错误弹窗提示 `<Assets module> Cannot get assets list: Problem with assets URL`  
+**解决**: 安装链接的填写位置错误，应该填写在[安装扩展](./安装与更新#安装方法)按钮中的输入框，而不是“下载扩展和资源菜单”中的输入框。
+
+### 安装时弹出黄色警告弹窗
+
+#### 提示文件夹已存在
+**问题**: 黄色警告弹窗提示 `Extension installation failed： Directory already exists...`  
 **解决**: 
 1. 进入酒馆安装目录 `SillyTavern/data/default-user/extensions`
 2. 删除 `JS-Slash-Runner` 文件夹
-3. 检查网络连接（建议使用不需要国外网络环境的gitlab安装链接），重新安装扩展
+3. 检查网络连接（建议使用不需要国外网络环境的[gitlab安装链接](./安装与更新#安装方法)），重新安装扩展
 
-### 安卓文件访问
-**问题**: 如何在安卓手机上访问酒馆文件夹？  
-**解决**: (仅适用于部分安卓系统，未经全面测试)
+---
+附：安卓访问酒馆目录的方法
 
-- **方法一**: 通过文件管理器
+- **方法一: 通过文件管理器**
   1. 启动 Termux
   2. 使用系统文件管理器进入受限制目录 Android/data
   3. 在新的文件管理界面通过侧边栏访问 Termux
 
-- **方法二**: 使用 MT 管理器
+- **方法二: 使用 MT 管理器**
   1. 启动 Termux
   2. 在 MT 管理器添加本地存储
   3. 通过 MT 管理器侧边栏访问 Termux
 
-- **方法三**: 使用 zerotermux  
+- **方法三: 使用 zerotermux**  
   ZeroTermux 是根据 Termux 二次开发的一个非盈利性的软件，安装其内部插件后可直接访问 Termux 文件目录。
-  [详见Discord帖子](https://discord.com/channels/1134557553011998840/1327980841497788457/1328211004194291714)
 
-- 找不到文件夹但还是提示文件夹存在？**终极方案**:  
+- 怎么都找不到文件夹但还是提示存在？**终极方案**:  
   1. 打开termux，如果装了一键脚本输入0退出
   2. 输入下面的内容，回车
   ```bash
   cd /
   ```
-  3. 输入下面的内容，回车，然后等待搜索完成
+  1. 输入下面的内容，回车，然后等待搜索完成
   ```bash
   find ~ -type d -name "JS-Slash-Runner"
   ```
@@ -60,10 +69,20 @@ order: 2
   `find ~ -type d -name "JS-Slash-Runner" | rm -rf`
   :::
 
-### Git 相关错误
-**问题**: 提示 `Extension installation failed, Server Error:Error: spawn git ENOENT...`的黄色错误弹窗  
-**解决**: 安装/重新安装 git 或添加 git 到环境变量
+#### Git 相关错误
+**问题**: 黄色警告弹窗提示 `Extension installation failed: Server Error:Error: spawn git ENOENT...`  
+**解决**: 
+- 安装或重装 git
+- 已安装 git 则尝试添加 git 到环境变量
 
+#### 链接输入错误
+**问题**: 
+- 黄色警告弹窗提示 `Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash- Runner'... warning:url contains a newline in its pathcomponent`
+- 黄色警告弹窗提示 `Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... remote:Repository not found. fatal:Authentication failed for'https://github.com/NOVI028/JS-Slash-Runner.git/'`  
+  
+**解决**: 都因填写的安装链接错误，检查是否出现如下情况，更正后重新安装
+- 复制时在`Runner`前多了一个换行符，如`JS-Slash- Runner`
+- 使用屏幕识别导致链接中的大写字母`O`与数字`0`混淆，如`https://github.com/NOVI028/JS-Slash-Runner.git`
 
 ### 手动安装方法
 **问题**: 常规安装方法都失败？  
@@ -103,7 +122,7 @@ order: 2
 **问题**: QR 触发不起作用？  
 **解决**: 检查并删除代码中的 triggerSlash 函数定义，避免覆盖扩展默认定义
 
-## 游玩前端卡的常见问题 <Badge type="tip" text="Last update：2025.01.04"/>
+## 安装成功但显示出现问题 <Badge type="tip" text="Last update：2025.01.04"/>
 
 即使成功安装了前端助手，仍然无法正常游玩前端卡？
 
@@ -136,7 +155,7 @@ order: 2
 - 关闭【自动修复markdown】
 - 关闭【**全局世界书**】（注意：只需在角色卡详情中启用即可，地球图标亮起表示成功）
 - 关闭【**油猴脚本**/Gemini轮询扩展的**HTML注入器**】
-- 关闭【酒馆聊天自动翻译插件和浏览器的**自动翻译**】
+- 关闭【酒馆聊天**自动翻译插件**和浏览器的**自动翻译**】
 > 开启HTML代码注入器可能导致前端界面闪烁问题，空白，两次等多种错误。
 
 #### 3. 预设相关调整
@@ -200,11 +219,11 @@ order: 2
 
 #### 3. 太卡了/加载好久啊
 
-可以试试看打开浏览器的硬件加速，另外确保你的设备性能足够浏览大多数网页，更改设置中的加载信息条数（推荐做法是只加载5条并且让前端助手的深度为0，需要看更早的时候点击 more message即可）。
+可以试试看打开浏览器的硬件加速，另外确保你的设备性能足够浏览大多数网页，更改设置中的加载信息条数（推荐做法是只加载5条并且让前端助手的深度为0，需要看更早的时候点击 more message 即可）。
 
 #### 4.为啥我刚才明明正常显示画面了，过了一会回去看又不正常了？
 
 点击编辑后再点击确认按钮达到刷新的效果，一般可以解决此类问题。
 
-#### 5. 为啥出现了两次窗口
-Gemini轮询插件会再渲染一次代码内容，导致出现两个窗口。
+#### 5. 为啥出现了两次一样的窗口
+Gemini轮询插件的HTML注入器会再渲染一次代码内容，导致出现两个窗口。
