更新 常见问题解答.md

--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -106,17 +106,13 @@ order: 2
 **问题**: 扩展或扩展管理界面显示 `Not connected to the API!` 或 `Could not connect to API` 的红色错误提示文字  
 **解决**: 此提示与前端助手无关，本扩展无需连接API
 
-## 作者常见问题
+## 编写常见问题
 
 ### 代码渲染问题
 **问题**: 代码未能正确渲染？  
 **解决**: 确保同时满足：
 1. 代码使用三个反引号包裹
 2. 代码中包含 `<body></body>` 闭合标签
-
-### 界面闪现问题
-**问题**: 界面短暂显示后消失？  
-**解决**: 检查并关闭可能存在冲突的扩展或油猴插件
 
 ### QR 触发失效
 **问题**: QR 触发不起作用？  
@@ -126,7 +122,7 @@ order: 2
 
 即使成功安装了前端助手，仍然无法正常游玩前端卡？
 
-以下内容来自络络的总结，感谢分享！
+以下内容基于络络的总结，感谢分享！
 
 [![](https://img.shields.io/badge/Discord-%E7%BB%9C%E7%BB%9C-gray?style=for-the-badge&logo=discord&logoColor=white&labelColor=5865F2
 )](https://discord.com/channels/1134557553011998840/1324937235623051385)
@@ -154,9 +150,9 @@ order: 2
 - 关闭【禁用外部媒体】
 - 关闭【自动修复markdown】
 - 关闭【**全局世界书**】（注意：只需在角色卡详情中启用即可，地球图标亮起表示成功）
-- 关闭【**油猴脚本**/Gemini轮询扩展的**HTML注入器**】
+- 关闭【**油猴脚本HTML注入器**/Gemini轮询扩展的**HTML注入器**】
 - 关闭【酒馆聊天**自动翻译插件**和浏览器的**自动翻译**】
-> 开启HTML代码注入器可能导致前端界面闪烁问题，空白，两次等多种错误。
+> 开启HTML代码注入器可能导致前端界面闪烁，消失，重复等多种错误。
 
 #### 3. 预设相关调整
 ##### 关闭预设中的**COT/思维链/分析/正文/组织结构**等设定格式规则的功能
@@ -204,10 +200,10 @@ order: 2
 
 同时你也可以写出我已经根据此指南进行自查，但问题仍然存在，来避免被问及指南内包含的事项。（前提是你真的自查完整了！）
 
-### 常见Q&A
+### 前端卡常见问题
 
 #### 1. 我的格式出错了怎么办？
-请同时截取游玩时的界面和编辑内容（点击消息右上角的笔图标）进行提问。
+请同时截取游玩时渲染后的界面和原始文本（点击消息右上角的笔图标）进行提问。
 
 #### 2. 全是代码块怎么回事？
 
@@ -227,3 +223,7 @@ order: 2
 
 #### 5. 为啥出现了两次一样的窗口
 Gemini轮询插件的HTML注入器会再渲染一次代码内容，导致出现两个窗口。
+
+#### 6. 界面闪烁了一下之后就消失了/和界面交互后界面消失了
+
+检查是否开启了油猴脚本HTML注入器或Gemini轮询插件的HTML注入器，如果开启了请关闭。
