更新 常见问题解答.md

--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -127,7 +127,7 @@ order: 2
 [![](https://img.shields.io/badge/Discord-%E7%BB%9C%E7%BB%9C-gray?style=for-the-badge&logo=discord&logoColor=white&labelColor=5865F2
 )](https://discord.com/channels/1134557553011998840/1324937235623051385)
 
-### 界面显示问题
+### 自查建议
 如扩展安装成功但界面显示失败，请参考以下内容进行自查：
 
 #### 0.API与模型自查
@@ -200,7 +200,7 @@ order: 2
 
 同时你也可以写出我已经根据此指南进行自查，但问题仍然存在，来避免被问及指南内包含的事项。（前提是你真的自查完整了！）
 
-### 前端卡常见问题
+### 前端卡游玩常见问答
 
 #### 1. 我的格式出错了怎么办？
 请同时截取游玩时渲染后的界面和原始文本（点击消息右上角的笔图标）进行提问。
