--- a/docs/功能详情/变量操作/获取变量.md
+++ b/docs/功能详情/变量操作/获取变量.md
@@ -59,3 +59,9 @@ const 消息楼层变量 = {
 - 全局变量: <code v-pre>{{get_global_variable::神乐光.好感度}}</code>
 - 聊天变量: <code v-pre>{{get_chat_variable::商品.1.内容}}</code>
 - 消息楼层变量 (通过 `setChatMessage` 设置), 将会获取到最新绑定的消息楼层变量: <code v-pre>{{get_message_variable::当前剧情阶段}}</code>
+
+获取到的结果与 `JSON.stringify(变量)` 一致, 例如:
+
+- <code v-pre>{{get_global_variable::神乐光.好感度}}</code>: <code v-pre>'50'</code>;
+- <code v-pre>{{get_global_variable::神乐光}}</code>: <code v-pre>'{"好感度":50}'</code>;
+- <code v-pre>{{get_chat_variable::商品}}</code>: <code v-pre>'[{"内容":"..."},{"内容":"..."}]'</code>;
