--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -217,7 +217,13 @@ order: 2
 
 自查[API与模型自查](#_0-api与模型自查)，[预设相关调整](#_3-预设相关调整)，[正则相关调整](#_4-正则相关调整)，[世界书确认](#_5-世界书确认)这几个部分。
 
-在确保**完成所有自查步骤**后，问题很可能是由以下原因造成——预设中仍有未关闭的格式设置造成干扰、模型与预设不匹配、或使用的渠道质量存在问题。如果无法确定预设中的格式内容，建议在预设发布帖中友善提问 🥺
+在确保**完成所有自查步骤**后，仍旧难以排查，则问题很可能是本次输出的内容并非正确格式，造成无法正则匹配成功，你可以通过如下方法找到正确的输出格式：
+
+- 如果出问题的内容与首楼或历史楼层是同一类型的界面，则可以直接查看首楼或历史楼层的原始输出。
+- 如果并非同一类型，则可以查看局部正则的正则表达式，不熟悉正则表达式可以询问AI寻求解释。
+- 也可友善地向游玩同一张卡的其他人，或角色卡作者询问正确格式。
+
+获取到正确的输出格式后，则可以修改出错楼层的原始文本，修正为正确内容。出于上下文惯性，之后AI会学习正确的输出格式，出错的情况会逐渐减少。
 
 #### 3. 太卡了/加载好久啊
 
