--- a/docs/关于前端助手/介绍.md
+++ b/docs/关于前端助手/介绍.md
@@ -14,5 +14,5 @@
 
 - 🆕 [安装与更新](./安装与更新) - 如何安装和配置前端助手
 - 📖 [基本用法](../基本用法/渲染前端界面) - 学习前端助手在 SillyTavern 中的基本用法
-- 🔍 [功能详情](../功能详情/其他辅助功能) - 作为角色卡编写者/开发者，深入了解所有可用功能
+- 🔍 [功能详情](../功能详情/触发slash_command) - 作为角色卡编写者/开发者，深入了解所有可用功能
 - ❓ [常见问题解答](./常见问题解答) - 作为角色卡游玩者，解决使用中遇到的问题
