--- a/docs/基本用法/全局脚本.md
+++ b/docs/基本用法/全局脚本.md
@@ -9,6 +9,7 @@ order: 2
 
 :::warning
 - 名称必须以 `脚本-` 开头， 否则不会被识别为脚本。
+- 启用后 SillyTavern 会弹出两个黄色警告提示，分别为`This regex script will not work,but was saved anyway: One "Affects" checkbox must be selected!`和`This regex script will not work, but was saved anyway: A find regex isn't present.`，无需进行处理，不影响脚本执行。
 - 该脚本将会在切换聊天时被执行：关闭聊天，正则被开关或修改，新建聊天，切换角色卡……等。总之玩家每次游玩的最开始时必然会触发该脚本。具体什么时候执行很难说，**因此建议不要直接执行你要做的事情**，而是用 [监听和发送事件](#监听和发送事件) 的方法来在某些事件发生时执行该脚本内容。
 - 为了加载效率，多脚本的加载是同时进行的，如果需要一个脚本后于另一个脚本加载，你应该使用 [监听和发送事件](#监听和发送事件) 让那个脚本等待。
 - **不同正则下的脚本代码并不共享**，如果非要拆分放在不同正则，你需要使用 [监听和发送事件](#监听和发送事件) 进行通讯和数据传递。
