--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -9,7 +9,7 @@ order: 2
 ### 安装后无任何响应
 
 **问题**: 安装扩展之后没有反应？  
-**解决**: 检查网络连接。如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络。
+**解决**: 检查网络连接。如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络，代理软件若有TUN模式也一并开启。
 
 ### 安装/更新成功但扩展不显示
 
@@ -70,9 +70,9 @@ order: 2
   :::
 
 #### Git 相关错误
-**问题**: 黄色警告弹窗提示 `Extension installation failed: Server Error:Error: spawn git ENOENT...`  
+**问题**: 黄色警告弹窗提示 `Extension installation failed: Server Error:Error: spawn git ENOENT at ChildProcess.handel.onexit...`  
 **解决**: 
-- 安装或重装 git
+- [安装或重装 git](https://git-scm.com/downloads)
 - 已安装 git 则尝试添加 git 到环境变量
 
 #### 链接输入错误
@@ -83,6 +83,7 @@ order: 2
 **解决**: 都因填写的安装链接错误，检查是否出现如下情况，更正后重新安装
 - 复制时在`Runner`前多了一个换行符，如`JS-Slash- Runner`
 - 使用屏幕识别导致链接中的大写字母`O`与数字`0`混淆，如`https://github.com/NOVI028/JS-Slash-Runner.git`
+- 其他导致链接错误的情况
 
 ### 手动安装方法
 **问题**: 常规安装方法都失败？  
