调整 sillyTavern 的说明

--- a/docs/功能详情/脚本代码.md
+++ b/docs/功能详情/脚本代码.md
@@ -15,19 +15,11 @@ function sillyTavern(): SillyTavern
 ```
 
 ```typescript [interface SillyTavern]
-interface SillyTavern {
-  /**
-   * 酒馆提供给插件的稳定接口, 具体内容见于 https://github.com/SillyTavern/SillyTavern/blob/release/public/scripts/st-context.js#L76
-   * 你也可以在酒馆页面按 f12, 在监视中输入 `window.SillyTavern` 来查看当前酒馆所提供的接口
-   */
-  getContext: () => any;
-
-  /**
-   * 酒馆提供给插件的一些第三方库, 具体内容见于 https://github.com/SillyTavern/SillyTavern/blob/release/public/lib.js#L79
-   * 你也可以在酒馆页面按 f12, 在监视中输入 `window.SillyTavern` 来查看当前酒馆所提供的接口
-   */
-  libs: Record<string, any>;
-}
+/**
+ * 酒馆提供给插件的稳定接口, 具体内容见于 https://github.com/SillyTavern/SillyTavern/blob/release/public/scripts/st-context.js#L76
+ * 你也可以在酒馆页面按 f12, 在监视中输入 `window.SillyTavern` 来查看当前酒馆所提供的接口
+ */
+type SillyTavern = any;
 ```
 
 :::
@@ -36,5 +28,5 @@ interface SillyTavern {
 
 ```typescript
 // 获取第 0 条消息的数据
-alert(JSON.stringify(sillyTavern().getContext().chat[0]));
+alert(JSON.stringify(sillyTavern().chat[0]));
 ```
