调整模块脚本的示例图

--- a/docs/基本用法/模块脚本.md
+++ b/docs/基本用法/模块脚本.md
@@ -6,7 +6,7 @@ order: 6
 
 在正则中新建一个 `模块-你想要的脚本名称` 正则 , 然后你就能在正则的替换区域中填写你想要的模块 JavaScript 代码。
 
-![模块脚本示例](/模块脚本.jpg)
+![模块脚本示例](/模块脚本.png)
 
 :::warning
 
