调整事件监听的接口说明

--- a/docs/功能详情/监听和发送事件.md
+++ b/docs/功能详情/监听和发送事件.md
@@ -14,10 +14,10 @@
 如果 `listener` 已经在监听 `event_type`，则调用本函数不会有任何效果。
 
 ```typescript
-async function eventOn(
-  event_type: EventType,
-  listener: Function
-): Promise<void>;
+function eventOn<T extends EventType>(
+  event_type: T,
+  listener: ListenerType[T],
+): void;
 ```
 
 ### 参数
@@ -61,10 +61,10 @@ function detectMessageEdited(message_id) {
 如果 `listener` 已经在监听 `event_type`，则调用本函数会将 `listener` 调整为最后运行。
 
 ```typescript
-async function eventMakeLast(
-  event_type: EventType,
-  listener: Function
-): Promise<void>;
+function eventMakeLast<T extends EventType>(
+  event_type: T,
+  listener: ListenerType[T],
+): void;
 ```
 
 ### 参数
@@ -92,10 +92,10 @@ eventMakeLast(要监听的事件, 要注册的函数);
 如果 `listener` 已经在监听 `event_type`，则调用本函数会将 `listener` 调整为最先运行。
 
 ```typescript
-async function eventMakeFirst(
-  event_type: EventType,
-  listener: Function
-): Promise<void>;
+function eventMakeFirst<T extends EventType>(
+  event_type: T,
+  listener: ListenerType[T],
+): void;
 ```
 
 ### 参数
@@ -123,10 +123,10 @@ eventMakeLast(要监听的事件, 要注册的函数);
 如果 `listener` 已经在监听 `event_type`，则调用本函数不会有任何效果。
 
 ```typescript
-async function eventOnce(
-  event_type: EventType,
-  listener: Function
-): Promise<void>;
+function eventOnce<T extends EventType>(
+  event_type: T,
+  listener: ListenerType[T],
+): void;
 ```
 
 ### 参数
@@ -175,9 +175,9 @@ await eventWaitOnce(tavern_events.MESSAGE_DELETED);
 在调用本函数前, `listener` 必须已经在监听 `event_type`。
 
 ```typescript
-async function eventWaitOnce(
-  event_type: EventType,
-  listener: Function
+async function eventWaitOnce<T extends EventType>(
+  event_type: T,
+  listener: ListenerType[T],
 ): Promise<any | undefined>;
 ```
 
@@ -207,7 +207,10 @@ await eventWaitOnce("存档", save);
 所有正在监听 `event_type` 消息频道的都会收到该消息并接收到 `data`。
 
 ```typescript
-async function eventEmit(event_type: EventType, ...data: any[]): Promise<void>;
+async function eventEmit<T extends EventType>(
+  event_type: T,
+  ...data: Parameters<ListenerType[T]>
+): Promise<void>;
 ```
 
 ### 参数
@@ -250,10 +253,10 @@ eventEmit("事件", "你好", 0);
 如果 `listener` 没有监听 `event_type`，则调用本函数不会有任何效果。
 
 ```typescript
-async function eventRemoveListener(
-  event_type: EventType,
-  listener: Function
-): Promise<void>;
+function eventRemoveListener<T extends EventType>(
+  event_type: T,
+  listener: ListenerType[T],
+): void;
 ```
 
 ### 参数
@@ -279,7 +282,7 @@ eventRemoveListener(要取消监听的事件, 要取消注册的函数);
 取消本 iframe 中对 `event_type` 的所有监听。
 
 ```typescript
-async function eventClearEvent(event_type: EventType): Promise<void>;
+function eventClearEvent(event_type: EventType): void;
 ```
 
 ### 参数
@@ -294,7 +297,7 @@ async function eventClearEvent(event_type: EventType): Promise<void>;
 取消本 iframe 中 `listener` 的所有监听。
 
 ```typescript
-async function eventClearListener(listener: Function): Promise<void>;
+function eventClearListener(listener: Function): void;
 ```
 
 ### 参数
@@ -309,7 +312,7 @@ async function eventClearListener(listener: Function): Promise<void>;
 取消本 iframe 中对所有事件的所有监听。
 
 ```typescript
-async function eventClearAll(): Promise<void>;
+function eventClearAll(): void;
 ```
 
 ## Quick Reply 命令
