--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -25,8 +25,15 @@ order: 2
 
 ### 安装时弹出黄色警告弹窗
 
+根据弹窗提示的内容，可能有以下几种情况，请点击文字跳转至对应解决方案：
+
+- [`Extension installation failed: Directory already exists...`](#提示文件夹已存在)
+- [`Extension installation failed: Server Error:Error: spawn git ENOENT at ChildProcess.handel.onexit...`](#git-相关错误)
+- [`Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... warning:url contains a newline in its pathcomponent`](#链接输入错误)
+- [`Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... remote:Repository not found. fatal:Authentication failed for'https://github.com/NOVI028/JS-Slash-Runner.git/'`](#链接输入错误)
+
 #### 提示文件夹已存在
-**问题**: 黄色警告弹窗提示 `Extension installation failed： Directory already exists...`  
+**问题**: 黄色警告弹窗提示 `Extension installation failed: Directory already exists...`  
 **解决**: 
 1. 进入酒馆安装目录 `SillyTavern/data/default-user/extensions`
 2. 删除 `JS-Slash-Runner` 文件夹
@@ -72,15 +79,39 @@ order: 2
 #### Git 相关错误
 **问题**: 黄色警告弹窗提示 `Extension installation failed: Server Error:Error: spawn git ENOENT at ChildProcess.handel.onexit...`  
 **解决**: 
-- [安装或重装 git](https://git-scm.com/downloads)
+- 安装或重装 git
 - 已安装 git 则尝试添加 git 到环境变量
+
+---
+
+附：安装 git 方法
+
+- **Windows端**
+1. 访问 [git官网](https://git-scm.com/downloads)，选择 `Download for Windows` 后，在新页面选择`Click here to download`下载安装包。
+2. 安装时在 `Adjusting your PATH environment`（调整 PATH 环境变量）界面，选择有 `(Recommended)` 红字的推荐选项
+
+- **Termux端**
+1. 启动 Termux
+2. 如果使用了一键脚本，发送 `0` 退出
+3. 发送以下内容更新包管理器
+```bash
+pkg update
+```
+4. 发送以下内容安装 git
+```bash
+pkg install git
+```
+5. 安装完成后，发送以下内容检查是否安装成功
+```bash
+git --version
+```
 
 #### 链接输入错误
 **问题**: 
 - 黄色警告弹窗提示 `Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash- Runner'... warning:url contains a newline in its pathcomponent`
 - 黄色警告弹窗提示 `Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... remote:Repository not found. fatal:Authentication failed for'https://github.com/NOVI028/JS-Slash-Runner.git/'`  
   
-**解决**: 都因填写的安装链接错误，检查是否出现如下情况，更正后重新安装
+**解决**: 都由填写的安装链接错误造成，检查是否出现如下情况，更正后重新安装
 - 复制时在`Runner`前多了一个换行符，如`JS-Slash- Runner`
 - 使用屏幕识别导致链接中的大写字母`O`与数字`0`混淆，如`https://github.com/NOVI028/JS-Slash-Runner.git`
 - 其他导致链接错误的情况
