--- a/docs/功能详情/监听和发送事件.md
+++ b/docs/功能详情/监听和发送事件.md
@@ -520,8 +520,8 @@ type ListenerType = {
   [tavern_events.CHARACTER_GROUP_OVERLAY_STATE_CHANGE_AFTER]: (
     state: number
   ) => void;
-  [tavern_events.USER_MESSAGE_RENDERED]: (message_id: string) => void;
-  [tavern_events.CHARACTER_MESSAGE_RENDERED]: (message_id: string) => void;
+  [tavern_events.USER_MESSAGE_RENDERED]: (message_id: number) => void;
+  [tavern_events.CHARACTER_MESSAGE_RENDERED]: (message_id: number) => void;
   [tavern_events.FORCE_SET_BACKGROUND]: (background: {
     url: string;
     path: string;
