--- a/docs/关于前端助手/常见问题解答.md
+++ b/docs/关于前端助手/常见问题解答.md
@@ -39,6 +39,10 @@ order: 2
 2. 删除 `JS-Slash-Runner` 文件夹
 3. 检查网络连接（建议使用不需要国外网络环境的[gitlab安装链接](./安装与更新#安装方法)），重新安装扩展
 
+::: tip
+如果上方的路径找不到文件夹，查看`SillyTavern/public/scripts/extensions/third-party`下是否存在
+:::
+
 ---
 附：安卓访问酒馆目录的方法
 
