docs: 调整 CHAT_COMPLETION_SETTINGS_READY 的参数

--- a/docs/功能详情/监听和发送事件.md
+++ b/docs/功能详情/监听和发送事件.md
@@ -435,9 +435,7 @@ type ListenerType = {
   [iframe_events.MESSAGE_IFRAME_RENDER_ENDED]: (iframe_name: string) => void;
   [iframe_events.GENERATION_STARTED]: () => void;
   [iframe_events.STREAM_TOKEN_RECEIVED_FULLY]: (full_text: string) => void;
-  [iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY]: (
-    incremental_text: string
-  ) => void;
+  [iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY]: (incremental_text: string) => void;
   [iframe_events.GENERATION_ENDED]: (text: string) => void;
 
   [tavern_events.APP_READY]: () => void;
@@ -465,7 +463,7 @@ type ListenerType = {
       quietName?: string;
       depth?: number;
     },
-    dry_run: boolean
+    dry_run: boolean,
   ) => void;
   [tavern_events.GENERATION_STARTED]: (
     type: string,
@@ -481,7 +479,7 @@ type ListenerType = {
       quietName?: string;
       depth?: number;
     },
-    dry_run: boolean
+    dry_run: boolean,
   ) => void;
   [tavern_events.GENERATION_STOPPED]: () => void;
   [tavern_events.GENERATION_ENDED]: (message_id: number) => void;
@@ -504,44 +502,46 @@ type ListenerType = {
   }) => void;
   [tavern_events.OAI_PRESET_CHANGED_AFTER]: () => void;
   [tavern_events.OAI_PRESET_EXPORT_READY]: (preset: Object) => void;
-  [tavern_events.OAI_PRESET_IMPORT_READY]: (result: {
-    data: Object;
-    presetName: string;
-  }) => void;
+  [tavern_events.OAI_PRESET_IMPORT_READY]: (result: { data: Object; presetName: string }) => void;
   [tavern_events.WORLDINFO_SETTINGS_UPDATED]: () => void;
   [tavern_events.WORLDINFO_UPDATED]: (name: string, data: Object) => void;
-  [tavern_events.CHARACTER_EDITED]: (result: {
-    detail: { id: string; character: Object };
-  }) => void;
+  [tavern_events.CHARACTER_EDITED]: (result: { detail: { id: string; character: Object } }) => void;
   [tavern_events.CHARACTER_PAGE_LOADED]: () => void;
-  [tavern_events.CHARACTER_GROUP_OVERLAY_STATE_CHANGE_BEFORE]: (
-    state: number
-  ) => void;
-  [tavern_events.CHARACTER_GROUP_OVERLAY_STATE_CHANGE_AFTER]: (
-    state: number
-  ) => void;
+  [tavern_events.CHARACTER_GROUP_OVERLAY_STATE_CHANGE_BEFORE]: (state: number) => void;
+  [tavern_events.CHARACTER_GROUP_OVERLAY_STATE_CHANGE_AFTER]: (state: number) => void;
   [tavern_events.USER_MESSAGE_RENDERED]: (message_id: number) => void;
   [tavern_events.CHARACTER_MESSAGE_RENDERED]: (message_id: number) => void;
-  [tavern_events.FORCE_SET_BACKGROUND]: (background: {
-    url: string;
-    path: string;
-  }) => void;
+  [tavern_events.FORCE_SET_BACKGROUND]: (background: { url: string; path: string }) => void;
   [tavern_events.CHAT_DELETED]: (chat_file_name: string) => void;
   [tavern_events.CHAT_CREATED]: () => void;
   [tavern_events.GROUP_CHAT_DELETED]: (chat_file_name: string) => void;
   [tavern_events.GROUP_CHAT_CREATED]: () => void;
   [tavern_events.GENERATE_BEFORE_COMBINE_PROMPTS]: () => void;
-  [tavern_events.GENERATE_AFTER_COMBINE_PROMPTS]: (result: {
-    prompt: string;
-    dryRun: boolean;
-  }) => void;
+  [tavern_events.GENERATE_AFTER_COMBINE_PROMPTS]: (result: { prompt: string; dryRun: boolean }) => void;
   [tavern_events.GENERATE_AFTER_DATA]: (generate_data: Object) => void;
   [tavern_events.GROUP_MEMBER_DRAFTED]: (character_id: string) => void;
   [tavern_events.WORLD_INFO_ACTIVATED]: (entries: any[]) => void;
   [tavern_events.TEXT_COMPLETION_SETTINGS_READY]: () => void;
-  [tavern_events.CHAT_COMPLETION_SETTINGS_READY]: (
-    generate_data: Object
-  ) => void;
+  [tavern_events.CHAT_COMPLETION_SETTINGS_READY]: (generate_data: {
+    messages: { role: string; content: string }[];
+    model: string;
+    temprature: number;
+    frequency_penalty: number;
+    presence_penalty: number;
+    top_p: number;
+    max_tokens: number;
+    stream: boolean;
+    logit_bias: Object;
+    stop: string[];
+    chat_comletion_source: string;
+    n?: number;
+    user_name: string;
+    char_name: string;
+    group_names: string[];
+    include_reasoning: boolean;
+    reasoning_effort: string;
+    [others: string]: any;
+  }) => void;
   [tavern_events.CHAT_COMPLETION_PROMPT_READY]: (event_data: {
     chat: { role: string; content: string }[];
     dryRun: boolean;
@@ -551,14 +551,8 @@ type ListenerType = {
     output: string;
     character: Object;
   }) => void;
-  [tavern_events.CHARACTER_DELETED]: (result: {
-    id: string;
-    character: Object;
-  }) => void;
-  [tavern_events.CHARACTER_DUPLICATED]: (result: {
-    oldAvatar: string;
-    newAvatar: string;
-  }) => void;
+  [tavern_events.CHARACTER_DELETED]: (result: { id: string; character: Object }) => void;
+  [tavern_events.CHARACTER_DUPLICATED]: (result: { oldAvatar: string; newAvatar: string }) => void;
   [tavern_events.STREAM_TOKEN_RECEIVED]: (text: string) => void;
   [tavern_events.FILE_ATTACHMENT_DELETED]: (url: string) => void;
   [tavern_events.WORLDINFO_FORCE_ACTIVATE]: (entries: Object[]) => void;
@@ -567,12 +561,12 @@ type ListenerType = {
   [tavern_events.IMAGE_SWIPED]: (result: {
     message: Object;
     element: JQuery<HTMLElement>;
-    direction: "left" | "right";
+    direction: 'left' | 'right';
   }) => void;
   [tavern_events.CONNECTION_PROFILE_LOADED]: (profile_name: string) => void;
   [tavern_events.TOOL_CALLS_PERFORMED]: (tool_invocations: Object[]) => void;
   [tavern_events.TOOL_CALLS_RENDERED]: (tool_invocations: Object[]) => void;
-  [custom_event: string]: Function;
+  [custom_event: string]: (...args: any) => any;
 };
 ```
 
