补充内嵌代码块的解释

--- a/docs/基本用法/模块脚本.md
+++ b/docs/基本用法/模块脚本.md
@@ -12,5 +12,5 @@ order: 6
 
 - 如果有多个模块, 名字不要重复
 - 全局脚本的所有注意事项在这里依旧适用。
-- 你可以用 [`sillyTavern()`](https://github.com/SillyTavern/SillyTavern/blob/release/public/scripts/st-context.js#L76) 访问酒馆公开给扩展的所有功能。
+- 你可以用 [`SillyTavern`](https://github.com/SillyTavern/SillyTavern/blob/release/public/scripts/st-context.js#L76) 访问酒馆公开给扩展的所有功能。
 - **暂时没有迁移前端助手提供的各种函数**。
