--- a/docs/功能详情/脚本代码.md
+++ b/docs/功能详情/脚本代码.md
@@ -2,24 +2,20 @@
 
 <CustomTOC />
 
-## sillyTavern
+## SillyTavern
 
-通过 `sillyTavern()`，你可以访问酒馆提供给扩展的稳定接口。
+通过 `SillyTavern`，你可以访问酒馆提供给扩展的稳定接口。
 
 而前端助手在酒馆接口之外，提供了更多更直接的功能。
 
 :::code-group
 
-```typescript [sillyTavern]
-function sillyTavern(): SillyTavern
-```
-
-```typescript [interface SillyTavern]
+```typescript [SillyTavern]
 /**
  * 酒馆提供给插件的稳定接口, 具体内容见于 https://github.com/SillyTavern/SillyTavern/blob/release/public/scripts/st-context.js#L76
- * 你也可以在酒馆页面按 f12, 在监视中输入 `window.SillyTavern` 来查看当前酒馆所提供的接口
+ * 你也可以在酒馆页面按 f12, 在控制台中输入 `window.SillyTavern.getContext()` 来查看当前酒馆所提供的接口
  */
-type SillyTavern = any;
+const SillyTavern;
 ```
 
 :::
@@ -28,5 +24,5 @@ type SillyTavern = any;
 
 ```typescript
 // 获取第 0 条消息的数据
-alert(JSON.stringify(sillyTavern().chat[0]));
+alert(JSON.stringify(SillyTavern.chat[0]));
 ```
