--- a/docs/基本用法/渲染前端界面.md
+++ b/docs/基本用法/渲染前端界面.md
@@ -45,25 +45,39 @@ order: 1
 - 代码中同时存在 `<body>` 和 `</body>` 标签
   :::
 
-## 获取 User 头像
+## 获取角色头像
 
-若要在界面中展示 User 头像，需使用 class `user-avatar`或`user_avatar`。
+### 使用CSS类
+
+若要在界面中展示 Char 或 User 的头像，需使用 class `user-avatar`、`user_avatar` 或 `char-avatar`、`char_avatar`。
 
 :::info 示例
-在你想要放入用户头像的地方设置 class 为 `user-avatar`或`user_avatar`, 此时容器的背景图片就会变为当前用户头像
+在你想要放入头像的地方设置 class 为 `user-avatar`、`user_avatar` 或 `char-avatar`、`char_avatar`，此时容器的背景图片就会变为当前用户或角色的头像。
 
 ```html
-<div class="user-avatar"></div>
-<!-- 或者<div class="user_avatar"></div> -->
+<div class="char_avatar"></div>
+<div class="user_avatar"></div>
+<!-- 或者<div class="char-avatar"></div> -->
+<!-- 或者<div class="user-avatar"></div> -->
 ```
-
 :::
 class 样式只导入了图片链接 `background-image: url('${avatarPath}');`, 没有特意设置其他样式, 具体的图片填充方式需使用者手动添加样式。
+
+### 使用宏
+
+头像链接已注册为宏，`{{userAvatarPath}}`和`{{charAvatarPath}}`两个宏，可直接替换为当前user和char的图像路径。
+
+:::info 示例
+```html
+<div class="char_avatar" style="background-image: url('{{charAvatarPath}}');"></div>
+<div class="user_avatar" style="background-image: url('{{userAvatarPath}}');"></div>
+```
+:::
+
 
 :::tip
 - 在聊天中途更换了 user 角色, 其显示逻辑与酒馆一致, 会在新的楼层显示新的头像
 - 想要将旧的楼层头像显示同步, 需要点击用户面板的同步按钮。
-- 如果想要获取角色（char）的头像，可直接插入`<img src="./characters/{{char}}.png">`
 :::
 
 ## 禁用加载动画
