--- a/docs/基本用法/渲染前端界面.md
+++ b/docs/基本用法/渲染前端界面.md
@@ -65,7 +65,7 @@ class 样式只导入了图片链接 `background-image: url('${avatarPath}');`, 
 
 ### 使用宏
 
-头像链接已注册为宏，`{{userAvatarPath}}`和`{{charAvatarPath}}`两个宏，可直接替换为当前user和char的图像路径。
+头像链接已注册为宏，<code v-pre>{{userAvatarPath}}</code>和<code v-pre>{{charAvatarPath}}</code>两个宏，可直接替换为当前user和char的图像路径。
 
 :::info 示例
 ```html
