--- a/docs/基本用法/渲染前端界面.md
+++ b/docs/基本用法/渲染前端界面.md
@@ -49,10 +49,10 @@ order: 1
 
 ### 使用CSS类
 
-若要在界面中展示 Char 或 User 的头像，需使用 class `user-avatar`、`user_avatar` 或 `char-avatar`、`char_avatar`。
+若要在界面中展示**当前**角色卡或用户的头像，需使用CSS类 `user-avatar`（或`user_avatar` ）， `char-avatar`（或`char_avatar`）。
 
 :::info 示例
-在你想要放入头像的地方设置 class 为 `user-avatar`、`user_avatar` 或 `char-avatar`、`char_avatar`，此时容器的背景图片就会变为当前用户或角色的头像。
+在你想要放入头像的地方设置 class 为 `user-avatar`（或`user_avatar` ）， `char-avatar`（或`char_avatar`），此时容器的背景图片就会变为当前用户或角色的头像。
 
 ```html
 <div class="char_avatar"></div>
