docs: 纠正 getIframeName() 的文档错误

--- a/docs/功能详情/其他辅助功能.md
+++ b/docs/功能详情/其他辅助功能.md
@@ -17,8 +17,8 @@ function getIframeName(): string;
 ### 返回值
 
 - **iframe 名称**: `string`
-  - 对于楼层消息是 `message-楼层id-是该楼层第几个iframe`
-  - 对于全局脚本是 `script-脚本名称`
+  - 对于楼层消息是 `message-iframe-楼层id-是该楼层第几个iframe`
+  - 对于全局脚本是 `script-iframe-脚本名称`
 
 ## getMessageId
 
