--- a/docs/功能详情/获取角色卡信息.md
+++ b/docs/功能详情/获取角色卡信息.md
@@ -303,7 +303,7 @@ interface ChatHistoryDetail {
 - **聊天历史详情**: [`Promise<Record<string, ChatHistoryDetail[]>>`](#getchathistorydetail) - 返回一个对象，其中键是聊天文件名，值是包含聊天消息的数组
 
 :::warning
-`getChatHistoryDetail` 根据 `file_name` 来获取角色名，因此不支持存在多个同名角色卡时，对聊天记录的精确获取，函数将始终返回最早创建的角色卡的聊天记录。
+`getChatHistoryDetail` 根据 `file_name` 来获取头像名，因此不支持存在多个同名角色卡时，对聊天记录的精确获取，函数将始终返回最早创建的角色卡的聊天记录。
 :::
 
 ### 示例
@@ -323,6 +323,6 @@ for (const name of charNames) {
   allHistoryBriefs.push(...historyBrief);
 }
 
-const historyDetail = await getChatHistoryDetail(allHistoryBriefs, true);
+const historyDetail = await getChatHistoryDetail(allHistoryBriefs);
 ```
 :::
