--- a/docs/关于前端助手/常见问题/安装与更新问题.md
+++ b/docs/关于前端助手/常见问题/安装与更新问题.md
@@ -118,14 +118,14 @@ git --version
 - 使用屏幕识别导致链接中的大写字母`O`与数字`0`混淆，如`https://github.com/NOVI028/JS-Slash-Runner.git`
 - 其他导致链接错误的情况
 
-## 手动安装方法
+## 以上安装方法都失败
 **问题**: 常规安装方法都失败？  
 **解决**: 使用[手动安装方法](../安装与更新#手动安装)
 
-## 更新加载问题
+## 扩展管理面板加载问题
 **问题**: 扩展管理面板一直显示 `Loading third-party extensions...`  
 **解决**: 连接或更换 VPN 后重试
 
-### 提示未连接到API
+## 提示未连接到API
 **问题**: 扩展或扩展管理界面显示 `Not connected to the API!` 或 `Could not connect to API` 的红色错误提示文字  
 **解决**: 此提示与前端助手无关，本扩展无需连接API
