update: 新增前端卡渲染优化

--- a/docs/关于前端助手/安装与更新.md
+++ b/docs/关于前端助手/安装与更新.md
@@ -52,6 +52,7 @@ order: 0
 ![界面示意](/界面示意.jpg)
 
 - **启用脚本注入**：扩展的总开关，开启后，将支持HTML+CSS+JS的界面渲染与扩展内置功能运行。
+- **前端卡渲染优化**：开启后，将取消代码块高亮，并自动隐藏和折叠，减少界面卡顿。
 - **启用播放器**：前端助手内置的播放器，可在不启用脚本注入的情况下独立运行。
 - **自动开关局部正则**：自动开启角色卡绑定的局部正则。
 - **自动关闭不兼容选项**：自动关闭 SillyTavern 中可能影响前端界面显示的选项。包括“自动修复Markdown”、“修剪不完整的句子”、“禁止外部媒体”。
