--- a/docs/基本用法/渲染前端界面.md
+++ b/docs/基本用法/渲染前端界面.md
@@ -39,10 +39,12 @@ order: 1
 
 :::
 :::warning
-被扩展识别并渲染需要同时满足以下条件：
+1. 被扩展识别并渲染需要同时满足以下条件：
 
 - 代码放置在代码块` ``` `标识中
 - 代码中同时存在 `<body>` 和 `</body>` 标签
+
+2. 为防止高度无限增长，代码中的`min-height: * vh` 会被自动转换为以浏览器高度为基准，而不是以iframe高度为基准。
   :::
 
 ## 获取角色头像
