变量更新事件

--- a/docs/功能详情/变量操作/获取变量.md
+++ b/docs/功能详情/变量操作/获取变量.md
@@ -65,3 +65,15 @@ const 消息楼层变量 = {
 - <code v-pre>{{get_global_variable::神乐光.好感度}}</code>: <code v-pre>'50'</code>;
 - <code v-pre>{{get_global_variable::神乐光}}</code>: <code v-pre>'{"好感度":50}'</code>;
 - <code v-pre>{{get_chat_variable::商品}}</code>: <code v-pre>'[{"内容":"..."},{"内容":"..."}]'</code>;
+
+#### 监听变量更新
+
+通过 `iframe_events.VARIABLES_UPDATED`, 你可以监听通过 `replaceVariables` 或 `setChatMessage` 进行的变量修改操作, 从而触发对应的事件:
+
+```typescript
+eventOn(iframe_events.VARIABLES_UPDATED, (type, variables) => {
+  if (type === 'chat' && variables.好感度 > 10) {
+    /* ... */
+  }
+});
+```
