--- a/docs/功能详情/请求生成.md
+++ b/docs/功能详情/请求生成.md
@@ -25,7 +25,7 @@ async function generate(config: GenerateConfig): Promise<string>;
 #### `should_stream?`
 
 - **类型**: `boolean`
-- **描述**: 是否启用流式传输；默认为 `false`
+- **描述**: 是否启用流式传输；默认为 `false`。启用流式传输后，可以接收到额外的事件，通过参数获得传输过程的完整/增量文本。具体见[函数的事件发送](./请求生成#函数的事件发送)
 
 #### `image?`
 
