更新 修改世界书.md

--- a/docs/功能详情/世界书/修改世界书.md
+++ b/docs/功能详情/世界书/修改世界书.md
@@ -99,3 +99,23 @@ await setLorebookEntries(
 ```
 
 :::
+
+## setCurrentCharLorebooks
+
+设置当前角色卡绑定的世界书。
+
+```typescript
+async function setCurrentCharLorebooks(
+  lorebooks: Partial<CharLorebooks>
+): Promise<void>;
+```
+
+### 参数
+
+#### lorebooks
+
+- **类型**: [`CharLorebook[]`](./获取世界书#getCharLorebooks)
+- **描述**: 
+  - `primary: string | null;`: 主要世界书名称，设为null或空字符串表示移除
+  - `additional: string[];`: 附加世界书名称数组，设为空数组表示移除所有附加世界书
+
