更新 接口访问.md

--- a/docs/3.0.0/功能详情/接口访问.md
+++ b/docs/3.0.0/功能详情/接口访问.md
@@ -1,4 +1,4 @@
-# 访问酒馆接口
+# 访问接口
 
 <CustomTOC />
 
@@ -27,12 +27,9 @@ const SillyTavern;
 alert(JSON.stringify(SillyTavern.chat[0]));
 ```
 
-# 访问酒馆助手接口
+## TavernHelper
 
 通过 `TavernHelper`，其他扩展也可以访问酒馆助手提供的稳定接口，可用接口为功能详情中的全部内容。
-
-
-## TavernHelper
 
 ### 示例
 
