--- a/docs/guide/关于酒馆助手/安装与更新.md
+++ b/docs/guide/关于酒馆助手/安装与更新.md
@@ -10,7 +10,7 @@ order: 0
 
 点击SillyTavern顶部的扩展图标，选择安装扩展，在弹出框内**二选一**任选一个链接填入：
 - https://gitlab.com/novi028/JS-Slash-Runner (不需要国外网络环境)
-- https://github.com/N0VI028/JS-Slash-Runner.git (需要国外网络环境)
+- https://github.com/N0VI028/JS-Slash-Runner (需要国外网络环境)
 
 然后点击保存即可。
 
