--- a/docs/guide/功能详情/变量操作/修改变量.md
+++ b/docs/guide/功能详情/变量操作/修改变量.md
@@ -5,7 +5,7 @@
 ## replaceVariables
 完全替换变量表。
 
-之所以提供这么直接的函数, 是因为前端助手内置了 lodash 库：
+之所以提供这么直接的函数, 是因为酒馆助手内置了 lodash 库：
 `insertOrAssignVariables` 等函数其实就是先 `getVariables` 获取变量表，用 lodash 库处理，再 `replaceVariables` 替换变量表。
 
 ```typescript
