--- a/docs/guide/功能详情/楼层消息.md
+++ b/docs/guide/功能详情/楼层消息.md
@@ -6,7 +6,7 @@
 
 获取聊天消息。
 
-酒馆虽然提供了 `/messages` 命令，但是它获取的是一整个字符串，并且不能获取楼层当前没在使用的消息 (点击箭头切换的那个 swipe 消息，在前端助手中我们称之为 "消息页"), 前端助手为此提供了一个函数获取更便于处理的消息。
+酒馆虽然提供了 `/messages` 命令，但是它获取的是一整个字符串，并且不能获取楼层当前没在使用的消息 (点击箭头切换的那个 swipe 消息，在酒馆助手中我们称之为 "消息页"), 酒馆助手为此提供了一个函数获取更便于处理的消息。
 
 :::code-group
 
