--- a/docs/guide/功能详情/请求生成.md
+++ b/docs/guide/功能详情/请求生成.md
@@ -1,6 +1,6 @@
 # 请求生成
 
-前端助手提供了函数用于更加灵活地请求 AI 生成回复，你可以通过它来自定义生成时要采用的提示词配置。
+酒馆助手提供了函数用于更加灵活地请求 AI 生成回复，你可以通过它来自定义生成时要采用的提示词配置。
 
 :::warning
 目前仅支持聊天补全（`Chat Completion`）。
