--- a/docs/guide/功能详情/版本操作.md
+++ b/docs/guide/功能详情/版本操作.md
@@ -1,34 +1,18 @@
-# 前端助手版本操作 <Badge type="tip" text="Ver 2.2.3" />
+# 酒馆助手版本操作
 <CustomTOC />
 
 ## getFrontendVersion
 
-获取前端助手版本号。
+获取酒馆助手版本号。
 
 ```typescript
-function getFrontendVersion(): string {
-  return $(".js-settings", window.parent.document)
-    .find(".extension_info.flex-container.spaceBetween > small")
-    .text()
-    .replace("Ver ", "");
-}
+function getFrontendVersion(): Promise<string>;
 ```
 ### 返回值
-- **前端助手版本号**: `string`
-
-::: tip
-自然地, 旧版本前端助手并没有这个函数。为了让该功能在旧版本下正常使用，你可以直接使用该函数内部的实现：
-
-```typescript
-const version = $(".js-settings", window.parent.document)
-  .find(".extension_info.flex-container.spaceBetween > small")
-  .text()
-  .replace("Ver ", "");
-```
-:::
+- **酒馆助手版本号**: `string`
 
 ## updateFrontendVersion
-尝试主动更新前端助手。
+尝试主动更新酒馆助手。
 
 ```typescript
 async function updateFrontendVersion(): Promise<boolean>;
