--- a/docs/guide/应用示例/随卡自动导入与更新快速回复.md
+++ b/docs/guide/应用示例/随卡自动导入与更新快速回复.md
@@ -1,13 +1,13 @@
 
 # 随卡自动导入与更新快速回复
 
-还在为角色卡导出不会同时导出快速回复而恶心吗？前端助手可以做到选择角色卡时自动导入/更新快速回复、自动启用快速回复——让玩家直接开玩！
+还在为角色卡导出不会同时导出快速回复而恶心吗？酒馆助手可以做到选择角色卡时自动导入/更新快速回复、自动启用快速回复——让玩家直接开玩！
 
 ## 原理
 
-- 前端助手可以用 [`triggerSlash`](../功能详情/触发快速回复命令) 使用 `/qr-set-on` 等命令
-- 前端助手支持在正则里加载全局脚本，而局部正则会随着角色卡导出对吧
-- 可是如果玩家局部正则被关掉了呢？前端助手现在已经提供了“自动打开局部正则”选项
+- 酒馆助手可以用 [`triggerSlash`](../功能详情/触发快速回复命令) 使用 `/qr-set-on` 等命令
+- 酒馆助手支持在正则里加载全局脚本，而局部正则会随着角色卡导出对吧
+- 可是如果玩家局部正则被关掉了呢？酒馆助手现在已经提供了“自动打开局部正则”选项
 
 ## 示例
 
