--- a/docs/guide/关于酒馆助手/参与贡献.md
+++ b/docs/guide/关于酒馆助手/参与贡献.md
@@ -6,7 +6,7 @@ order: 4
 
 ## 手动编译
 
-你可以参考 [参与前端插件开发的 VSCode 环境配置](https://sillytavern-stage-girls-dog.readthedocs.io/tool_and_experience/js_slash_runner/index.html) 来得到 VSCode 上更详细的配置和使用教程.
+你可以参考 [参与前端插件开发的 VSCode 环境配置](https://sillytavern-stage-girls-dog.readthedocs.io/工具经验/酒馆助手编写环境配置) 来得到 VSCode 上更详细的配置和使用教程.
 
 你需要先安装有 node 22+ 和 pnpm. 如果已经安装有 node 22+, 则 pnpm 可以按以下步骤安装:
 
