--- a/docs/guide/关于酒馆助手/安装与更新.md
+++ b/docs/guide/关于酒馆助手/安装与更新.md
@@ -9,8 +9,9 @@ order: 0
 ### SillyTavern在线安装
 
 点击SillyTavern顶部的扩展图标，选择安装扩展，在弹出框内**二选一**任选一个链接填入：
-- https://gitlab.com/novi028/JS-Slash-Runner (不需要国外网络环境)
-- https://github.com/N0VI028/JS-Slash-Runner (需要国外网络环境)
+
+- <https://gitlab.com/novi028/JS-Slash-Runner> (不需要国外网络环境)
+- <https://github.com/N0VI028/JS-Slash-Runner> (需要国外网络环境)
 
 然后点击保存即可。
 
@@ -19,10 +20,7 @@ order: 0
 
 **视频演示：**
 
-<video width="100%" height="auto" controls style="margin-top: 15px;">
-  <source src="https://gitgud.io/SmilingFace/tavern_resource/-/raw/main/酒馆助手/安装方法.mp4?inline=false" type="video/mp4">
-  您的浏览器不支持 video 标签
-</video>
+<video src="https://gitgud.io/StageDog/tavern_resource/-/raw/main/src/酒馆助手/安装方法.mp4" type="video/mp4" controls />
 
 ### 手动安装
 
@@ -31,13 +29,15 @@ order: 0
 3. 点击页面右上角绿色按钮 `Code` ，选择 `Download ZIP` 下载压缩包
 4. 解压并重命名为 `JS-Slash-Runner`
 5. 移动到相应的扩展目录。
-  - 如果想要为酒馆所有用户安装， 移动到`SillyTavern/public/scripts/extensions/third-party` 目录
-  - 如果想为指定用户安装， 移动到`SillyTavern/data/default-user/extensions` 目录
-   (酒馆多用户使用者请将 default-user 替换为实际用户名)
+
+- 如果想要为酒馆所有用户安装， 移动到`SillyTavern/public/scripts/extensions/third-party` 目录
+- 如果想为指定用户安装， 移动到`SillyTavern/data/default-user/extensions` 目录 (酒馆多用户使用者请将 default-user 替换为实际用户名)
 
 :::warning
+
 - 酒馆助手要求 SillyTavern 版本在 1.12.8 及其以上才能使用。
 - 手动安装的扩展无法自动检查更新
+
 :::
 
 ## 更新方法
@@ -57,5 +57,5 @@ order: 0
 
 :::tip
 前端渲染功能具有快捷切换开关，位于输入框旁的按钮内：
-<img src="/快捷开关.jpg" width="20%" alt="快捷开关">
+<img src="/快捷开关.jpg" width="50%" alt="快捷开关">
 :::
