--- a/docs/guide/基本用法/渲染器.md
+++ b/docs/guide/基本用法/渲染器.md
@@ -37,15 +37,13 @@ order: 1
 ```
 ````
 
-:::
 :::warning
 1. 被扩展识别并渲染需要同时满足以下条件：
+  - 代码放置在代码块` ``` `标识中
+  - 代码中同时存在 `<body>` 和 `</body>` 标签
 
-- 代码放置在代码块` ``` `标识中
-- 代码中同时存在 `<body>` 和 `</body>` 标签
-
-2. 为防止高度无限增长，代码中的`min-height: * vh` 会被自动转换为以浏览器高度为基准，而不是以iframe高度为基准。
-  :::
+2. 为防止高度无限增长，代码中的`min-height: * vh` 会被自动转换为以浏览器高度为基准，而不是以iframe高度为基准
+:::
 
 ## 获取角色头像
 
@@ -75,7 +73,6 @@ class 样式只导入了图片链接 `background-image: url('${avatarPath}');`, 
 <div class="user_avatar" style="background-image: url('{{userAvatarPath}}');"></div>
 ```
 :::
-
 
 :::tip
 - 在聊天中途更换了 user 角色, 其显示逻辑与酒馆一致, 会在新的楼层显示新的头像
