--- a/docs/guide/基本用法/脚本库.md
+++ b/docs/guide/基本用法/脚本库.md
@@ -9,17 +9,21 @@ order: 2
 
 ## 全局/局部脚本库
 
-脚本库分为 全局脚本库 和 局部脚本库 两个部分，其中 全局脚本库 适用于酒馆所有聊天， 局部脚本库 适用于当前角色卡。
+脚本库分为*全局脚本库*和*局部脚本库*两个部分
 
-局部脚本库中的脚本，会随角色卡一同导出。
+其中，
+
+- 全局脚本库：适用于酒馆所有聊天
+- 局部脚本库：适用于当前角色卡，会随角色卡一同导出
 
 功能按钮：
-  - 开关：控制脚本的运行
-  - 信息：查看脚本作者编写的脚本说明
-  - 编辑：修改脚本内容
-  - 移动：移动到另一作用范围的脚本库
-  - 导出：导出脚本配置
-  - 删除：移除脚本
+
+- 开关：控制脚本的运行
+- 信息：查看脚本作者编写的脚本说明
+- 编辑：修改脚本内容
+- 移动：移动到另一作用范围的脚本库
+- 导出：导出脚本配置
+- 删除：移除脚本
 
 ## 脚本编辑
 
@@ -27,25 +31,26 @@ order: 2
 
 ### 脚本内容
 
-   - 使用 JavaScript 编写具体的脚本逻辑
-   - 支持完整的 JavaScript 语法
-   - 可以调用酒馆助手提供的 API 和功能，参考功能详情部分
+- 使用 JavaScript 编写具体的脚本逻辑
+- 支持完整的 JavaScript 语法
+- 可以调用酒馆助手提供的 API 和功能，参考功能详情部分
 
 :::tip
-- 脚本可以直接使用jQuery的`$`符号控制SillyTavern主界面的DOM元素。
-- 可以直接使用的库可在[内置第三方库](/guide/功能详情/其他辅助功能/内置第三方库)中查看，无需重复安装。
-- 如果要在脚本关闭时执行功能，请使用`$('unload',()=>{})`。
+- 脚本可以直接使用 jQuery 的 `$` 符号控制 SillyTavern 主界面的 DOM 元素
+- 可以直接使用的库可在[内置第三方库](/guide/功能详情/其他辅助功能/内置第三方库)中查看，无需重复安装
+- 如果要在脚本关闭时执行功能，请使用 `$('unload',()=>{})`
 :::
 
 ### 作者备注
-   - 可以添加脚本的说明文档
-   - 支持简单的 markdown 和 html 格式
-   - 建议包含以下信息：
-     1. 脚本功能说明
-     2. 使用方法
-     3. 版本信息
-     4. 更新记录
-     5. 注意事项
+
+- 可以添加脚本的说明文档
+- 支持简单的 markdown 和 html 格式
+- 建议包含以下信息：
+  1. 脚本功能说明
+  2. 使用方法
+  3. 版本信息
+  4. 更新记录
+  5. 注意事项
 
 ### 按键绑定
 
@@ -61,6 +66,7 @@ order: 2
 - 删除按钮：删除按键
 
 #### 绑定方法
+
 按键绑定功能需要配合 [`eventOnButton`](/guide/功能详情/监听和发送事件#eventonbutton) 使用，在脚本中添加以下代码：
 
 ```javascript
@@ -79,4 +85,3 @@ eventOnButton('button_name', function(){
 扩展内置的脚本，可直接添加到脚本库中使用。
 
 ![内置脚本库](/内置脚本库.jpg)
-
