--- a/docs/guide/关于酒馆助手/编写酒馆助手角色卡的推荐方案.md
+++ b/docs/guide/关于酒馆助手/编写酒馆助手角色卡的推荐方案.md
@@ -4,24 +4,6 @@ order: 3
 
 # 编写酒馆助手角色卡的推荐方案
 
-## 获取 ai 辅助
+**推荐[安装 Cursor](https://www.cursor.com/) 来编写**.
 
-### 推荐：Cursor
-
-如果你在电脑上写卡， **推荐 [安装 Cursor](https://www.cursor.com/) 来编写**.
-
-具体方法请参考 [基于酒馆助手编写角色卡的 VSCode 环境配置](https://sillytavern-stage-girls-dog.readthedocs.io/tool_and_experience/js_slash_runner/index.html) ， 你可以关注[类脑帖子：用酒馆助手编写角色卡的 VSCode/Cursor 环境搭建](https://discord.com/channels/1134557553011998840/1320081111451439166) 来得知该教程的更新情况.
-
-### 使用 html 工具角色卡或 ai 官网
-
-如果实在不想安装 Cursor， 或你想在手机上编写， 可以在社区寻找美化大师一类的工具卡。但 AI 的资料库不会有酒馆助手的资料，因此需要发送这部分给大模型。
-
-### 使用实时监听
-
-你也可以使用实时监听来编写角色卡或脚本，启用后在Vscode或Cursor中的改动会实时同步到酒馆中，无需刷新。具体方法请参考Discord帖子 [用酒馆助手编写角色卡的VSCode/Cursor环境搭建](https://discord.com/channels/1134557553011998840/1320081111451439166/1354125905848569958) 
-
-![实时监听](/实时监听.jpg)
-
-### 编写角色卡的可用资料
-
-![获取资料](/获取资料.jpg)
+具体方法请参考[基于酒馆助手编写角色卡的 VSCode 环境配置](https://sillytavern-stage-girls-dog.readthedocs.io/工具经验/酒馆助手编写环境配置) ，你可以关注[类脑帖子：用酒馆助手编写角色卡的 VSCode/Cursor 环境搭建](https://discord.com/channels/1134557553011998840/1368363953423646750)来得知该教程的更新情况.
